# kirimel-python-sdk

./: .eslintrc.js  CHANGELOG.md  LICENSE  README.md  composer.json  package-lock.json  package.json  phpunit.xml  pyproject.toml  tsconfig.json
.github/workflows/: ci.yml  publish.yml
kirimel/: __init__.py  client.py  exceptions.py  http_client.py
kirimel/resources/: __init__.py
kirimel_python.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/: Client.php  HttpClient.php  client.ts  exceptions.ts  httpClient.ts  index.ts
src/Exceptions/: ApiException.php  AuthenticationException.php  RateLimitException.php  ValidationException.php
src/Resources/: Campaigns.php  Conversions.php  Forms.php  LandingPages.php  Lists.php  Segments.php  Subscribers.php  Templates.php  Webhooks.php  Workflows.php
src/resources/: Campaigns.ts  Conversions.ts  Forms.ts  LandingPages.ts  Lists.ts  Segments.ts  Subscribers.ts  Templates.ts  Workflows.ts
test/unit/: client.test.ts
tests/: test_client.py
tests/Unit/: ClientTest.php
